<resources>
    <string name="app_name">tdcalendar</string>

    <!-- Strings used for fragments for navigation -->
    <string name="action_settings">설정</string>
    <string name="action_main">메인</string>
    <string name="action_group">그룹</string>
    <string name="action_schedul">일정</string>
    <string name="action_make">방 만들기</string>

    <string name="emptyContent">내용을 추가해 주세요</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="day_of_week">
        <item>sun</item>
        <item>mon</item>
        <item>tue</item>
        <item>wed</item>
        <item>thu</item>
        <item>fri</item>
        <item>sat</item>
    </string-array>
</resources>